AIRDR-87: expand real-Paper integration coverage
Cover paid economy failures and late confirmations, public API handles, package GUI and reload workflows, paid crate persistence and expiry, and an isolated fresh-install lane.

Closes AIRDR-87

Co-Authored-By: Claude <noreply@anthropic.com>